# libcddb

./: .gitignore  Makefile.am  configure.ac
examples/: Makefile.am
include/cddb/: cddb_conn.h  cddb_disc.h  cddb_ni.h  cddb_regex.h
lib/: Makefile.am  cddb_cmd.c  cddb_conn.c  cddb_disc.c  cddb_net.c  cddb_regex.c
misc/: libcddb-0.9.0.ebuild  libcddb.ebuild
